--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.45.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.4.8",
